<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_scan"
        android:icon="@android:drawable/stat_sys_data_bluetooth"
        android:title="@string/tab_scan" />
    <item
        android:id="@+id/nav_paired"
        android:icon="@android:drawable/btn_star"
        android:title="@string/tab_paired" />
    <item
        android:id="@+id/nav_control"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/tab_control" />
    <item
        android:id="@+id/nav_battery"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/tab_battery" />
    <item
        android:id="@+id/nav_local"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/tab_local" />
    <item
        android:id="@+id/nav_security"
        android:icon="@android:drawable/ic_lock_lock"
        android:title="@string/tab_security" />
</menu>
